# openenv-cyberopsv1

./: Dockerfile  inference.py  main.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  tasks.py
server/: app.py
