[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "cyber-ops-v1"
version = "1.0.0"
description = "Real-world SecOps terminal tasks for agentic AI evaluation."
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "openai",
    "python-dotenv",
    "requests",
    "openenv-core>=0.2.0",
]

[project.scripts]
server = "main:app"
